# parametric-sundial

./: .gitignore  README.md  abc.gcode  example_flat_paper.py  form.py  gcode.py  main.py  sd.gcode  sundial.py
examples/: example_cad.py  example_plot.py
grasshopper/: remoteGHpythonExamble.gh  sundialGrasshopper.3dm  sundialGrasshopper.3dm.rhl  sundialGrasshopper.gh  sundiall.3dm.rhl
output/: .sundial_stuttgart_fall.stl.icloud  .sundial_stuttgart_fall2.stl.icloud  .sundial_stuttgart_fall3.stl.icloud  .sundial_stuttgart_fall4.stl.icloud  P.csv  P0.csv  P1.csv  axis_gnomon.txt  file.gcode  form.gcode  hourScale.csv  minScale.csv  noonTick.csv  points_gnomon_from21dez.txt  sundialGrasshopper.gh  sundiall.3dm  sundiall.3dm.rhl  sundiall.3dmbak  unnamed.gh  zifferblatt_min.txt  ziffernblatt_hours.txt
sundial/: pyproject.toml
sundial/src/sundial/: __init__.py  sundial.py
